<resources>
    <string name="app_name">Lewabo</string>

    <string name="confirm_string">Confirm</string>
    <string name="exit_tittle_string">Do you want to Exit?</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="no">No</string>
    <string name="no_internet">Please Connect To Internet</string>
    <string name="wait_string">Loading</string>
    <string name="something_went_wrong">Can Not Connect With Server</string>
    <string name="admin_string">Contact With Admin</string>

    <string name="wrong_passeord_string">Wrong Password or Mobile Number</string>
    <string name="network_available">Internet Available</string>
    <string name="validation_string">Please Check All Input</string>
    <string name="network_not_available">Internet is not available</string>

    <string name="getstart_string">Get Started</string>
    <string name="privacy_string">Privacy</string>
    <string name="signin_string">Sign in</string>
    <string name="email_string">Email or Phone  Number</string>
    <string name="pass_string">Password</string>
    <string name="first_string">First Name</string>
    <string name="last_string">Last Name</string>
    <string name="remember_string">Remember Me</string>
    <string name="help_string">Need  help?</string>
    <string name="help2_string">Help</string>
    <string name="loginfb_string">login  with facebook</string>
    <string name="new_string">New to lewabo?</string>
    <string name="signup_string"><u>Sigh up now.</u></string>
    <string name="signout_string">Sign Out</string>
    <string name="share_string">Share App</string>
    <string name="share2_string">Share</string>
    <string name="continue_string">continue</string>
    <string name="steap1_string">STEP 1 of 3</string>
    <string name="setup_string">Set up your account</string>
    <string name="reg11_string">Lewabo is personalised for you. Use your email and create a password to watch Lewabo on any device at any time</string>
    <string name="reg21_string">Enter your email and password to start your membership</string>
    <string name="reg22_string">just two more steps and you’re finished! we hatepaperwork, too.</string>
    <string name="reg23_string">Create your account</string>
    <string name="reg24_string">Please don not email me Lewabo special offers.</string>
    <string name="reg31_string">STEP 2 of 3</string>
    <string name="reg32_string">Choose your plan.</string>
    <string name="reg33_string">No commitments, cancel at any time.</string>
    <string name="reg34_string">everything on Lewabo for one low price</string>
    <string name="reg35_string">unlimited viewing on all your devices.</string>
    <string name="reg36_string">see the plans</string>
    <string name="reg41_string">Choose the plan that’s right for you.</string>
    <string name="reg42_string">Watch as much as you want. advert-free.</string>
    <string name="reg43_string">Recommendations just for you.</string>
    <string name="reg44_string">Change or cancel your plan anytime.</string>
    <string name="reg45_string">Basic</string>
    <string name="reg46_string">Economy</string>
    <string name="reg47_string">Premium</string>
    <string name="reg474_string">Golden</string>
    <string name="reg48_string">$9.99</string>
    <string name="reg49_string">$4.99</string>
    <string name="reg410_string">$54.99</string>
    <string name="reg415_string">$99.00</string>
    <string name="reg411_string">Fewer</string>
    <string name="reg412_string">Full</string>
    <string name="reg413_string">Movie access</string>
    <string name="reg414_string">Membership</string>
    <string name="reg416_string">1 month</string>
    <string name="reg417_string">6 months</string>
    <string name="reg418_string">12 months</string>


    <string name="reg51_string">STEP 3 of 3</string>
    <string name="reg52_string">Set up your payment</string>
    <string name="reg53_string">your membership starts as soon as you set up payment.</string>
    <string name="reg54_string">No commitments. cancel online at any time</string>
    <string name="reg62_string">set up your credit or debit card</string>
    <string name="reg63_string">By ticking the tickbox below, you agree to our Terms of Use, Privacy Statement, and that you are over 18. Lewabo will automatically continue your membership and charge the monthly membership fee to your payment method until you cancel. You may cancel at any time to avoid future charges..</string>
    <string name="reg64_string">I agree.</string>
    <string name="reg65_string">start membership</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tvshows_string">TV Shows</string>
    <string name="movies_string">Movies</string>
    <string name="mylist_string">My list</string>
    <string name="play_string">Play</string>
    <string name="info_string">info</string>

    <string name="home_string">Home</string>
    <string name="come_string">Coming Soon</string>
    <string name="recent_string">Recent View</string>
    <string name="top_string">Top Searches</string>
    <string name="subsexpired_string">Your Subscription Expired</string>
    <string name="search_hint">Search for a show, movie</string>
    <string name="more_string">More Like This</string>
    <string name="more2_string">More</string>
    <string name="allgen_string">All Generics</string>
    <string name="promore_string">Profiles &amp; more</string>
    <string name="privacy_url">https://lewabo.com/contact-us/</string>
    <string name="help_url">https://lewabo.com/contact-us/</string>
    <string name="no_browser_string">No Browser Found</string>
    <string name="like">Like</string>
    <string name="cast">Cast</string>
    <string name="director">Directors</string>
    <string name="writer">Writers</string>
    <string name="recover_password_string">Recover Password</string>
    <!-- <string name="_string"></string>
    <string name="_string"></string>-->


    <string name="plan2_string">USD9.99/1 Month</string>
    <string name="plan1_string">USD4.99/1 Month</string>
    <string name="plan3_string">USD54.99/6 Month</string>
    <string name="plan4_string">USd99.00/12 Month</string>
</resources>