<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.fragment.Reg4Page">

        <ImageView
            android:id="@+id/reg4_logo"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_fulllogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg4_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:text="@string/help2_string"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/reg4_login"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg4_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/signin_string"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg4_logo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/reg31_string"
                android:textAlignment="textStart"
                android:textColor="@color/app_black1"
                android:textSize="@dimen/font_l"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/reg41_string"
                android:textAlignment="textStart"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/font_extreme"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:clickable="false"
                android:paddingStart="10dp"
                android:text="@string/reg42_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:clickable="false"
                android:paddingStart="10dp"
                android:text="@string/reg43_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:button="@drawable/custom_checkbox"
                android:checked="true"
                android:clickable="false"
                android:paddingStart="10dp"
                android:text="@string/reg44_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/reg4_pacbutton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/rectangular_ash2"
                        android:padding="5dp"
                        android:text="@string/reg46_string"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xl"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/reg4_pactittle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/reg49_string"
                        android:textAlignment="center"
                        android:textColor="#5E5E5E"
                        android:textSize="@dimen/font_xxxl"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/reg4_pacbutton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/rectangular_black"
                        android:padding="5dp"
                        android:text="@string/reg45_string"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xl"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/reg4_pactittle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/reg48_string"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_xxxl"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/reg4_pacbutton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/rectangular_red"
                        android:padding="5dp"
                        android:text="@string/reg47_string"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xl"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/reg4_pactittle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/reg410_string"
                        android:textAlignment="center"
                        android:textColor="@color/app_red2"
                        android:textSize="@dimen/font_xxxl"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/reg4_pacbutton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/rectangular_black"
                        android:padding="5dp"
                        android:text="@string/reg474_string"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xl"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/reg4_pactittle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/reg415_string"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_xxxl"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/app_ash2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/reg413_string"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg411_string"
                    android:textAlignment="center"
                    android:textColor="#5E5E5E"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg412_string"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg412_string"
                    android:textAlignment="center"
                    android:textColor="@color/app_red2"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg412_string"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/app_ash2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/reg414_string"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg416_string"
                    android:textAlignment="center"
                    android:textColor="#5E5E5E"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg416_string"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg417_string"
                    android:textAlignment="center"
                    android:textColor="@color/app_red2"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/reg418_string"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/reg4_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gradient_red"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/continue_string"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>