<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.fragment.Reg3Page">

        <ImageView
            android:id="@+id/reg3_logo"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_fulllogo"
            app:layout_constraintEnd_toStartOf="@+id/reg3_privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg3_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/privacy_string"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/reg3_login"
            app:layout_constraintStart_toEndOf="@+id/reg3_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg3_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/signin_string"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reg3_privacy"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg3_logo">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_check"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/reg31_string"
                android:textAlignment="textStart"
                android:textColor="@color/app_black1"
                android:textSize="@dimen/font_l"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/reg32_string"
                android:textAlignment="textStart"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/font_extreme"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:checked="true"
                android:clickable="false"
                android:text="@string/reg33_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:checked="true"
                android:clickable="false"
                android:text="@string/reg34_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:checked="true"
                android:clickable="false"
                android:text="@string/reg35_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reg3_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangular_red"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/reg36_string"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>