<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.SplashPage">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/splash_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sliderAnimationDuration="900"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="900"
            app:sliderIndicatorEnabled="true"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="135dp"
            app:sliderIndicatorMarginBottom="100dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="@color/app_red2"
            app:sliderIndicatorUnselectedColor="@color/white"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/splash_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:text="@string/privacy_string"
            android:textColor="@color/white"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold" />

        <Button
            android:id="@+id/splash_getstarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangular_red"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/getstart_string"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </FrameLayout>
</layout>